--- a/src/components/MemberList/member.css
+++ b/src/components/MemberList/member.css
@@ -24,76 +24,57 @@
 }
 .member-list-section{
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(3, 1fr);
     justify-content: space-between;
-    width:  90rem;
+    width:  100rem;
     max-width: 100%;
     margin: 3rem auto;
     row-gap: 3rem;
     padding: 2rem;
 }
 .member{
-    width: 26rem;
+    width: 22rem;
     margin: 0 auto;
 }
 .member-one{
-    grid-column: 1/4;
+    grid-column: 1/5;
     grid-row: 1;
 
 }
 .member-two{
-    grid-column: 1/3;
+    grid-column: 2/3;
     grid-row: 2;
 
 }
 .member-three{
-    grid-column: 2/4;
+    grid-column: 3/4;
     grid-row: 2;
 
 }
-.member-six{
+.member-four{
+    grid-column: 1/2;
+    grid-row: 3;
+
+}
+.member-five{
     grid-column: 2/3;
     grid-row: 3;
 }
-.member-seven{
-    grid-column: 1/2;
-    grid-row: 3;
-}
-.member-eight{
+.member-six{
     grid-column: 3/4;
     grid-row: 3;
 }
-.member-img{
-    width: 26rem;
-    height: 28rem;
-    object-fit: cover;
-}
-
-@media screen and (max-width: 1360px){
-.member{
-    width: 25rem;
-    margin: 0 auto;
+.member-seven{
+    grid-column: 4/5;
+    grid-row: 3;
 }
 .member-img{
-    width: 25rem;
-    height: 100%;
+    width: 22rem;
+    height: 23rem;
     object-fit: cover;
 }
-/* .member-list-section{
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(3, 1fr);
-    justify-content: space-between;
-    width:  100%;
-    max-width: 100%;
-    margin: 3rem auto;
-    row-gap: 3rem;
-    padding: 2rem;
-} */
-}
-@media screen and (max-width: 1300px){
-
+@media screen and (max-width: 1540px){
     .member-list-section{
         display: grid;
         grid-template-columns: repeat(2, auto);
@@ -115,19 +96,35 @@
         grid-row: 2;
 
     }
-    .member-six{
+        .member-four{
+        grid-column: 1/2;
+        grid-row: 3;
+
+    }
+    .member-five{
         grid-column: 2/3;
         grid-row: 3;
     }
-    .member-seven{
+    .member-six{
         grid-column: 1/2;
-        grid-row: 3;
-    }
-    .member-eight{
-        grid-column: 1/3;
         grid-row: 4;
     }
+    .member-seven{
+        grid-column: 2/3;
+        grid-row: 4;
+    }
+    .member{
+    width: 25rem;
+    margin: 0 auto;
 }
+.member-img{
+    width: 25rem;
+    height: 100%;
+    object-fit: cover;
+}
+
+}
+
 @media screen and (max-width: 890px){
 
     .member-list-section{
@@ -150,17 +147,22 @@
         grid-row: 3;
 
     }
-    .member-six{
+        .member-four{
+        grid-column: 1/2;
+        grid-row: 4;
+
+    }
+    .member-five{
         grid-column: 1/2;
         grid-row: 5;
     }
-    .member-seven{
-        grid-column: 1/2;
-        grid-row: 4;
-    }
-    .member-eight{
+    .member-six{
         grid-column: 1/2;
         grid-row: 6;
+    }
+    .member-seven{
+        grid-column: 1/2;
+        grid-row: 7;
     }
 
 }
