--- a/src/components/MemberList/member.css
+++ b/src/components/MemberList/member.css
@@ -24,57 +24,116 @@
 }
 .member-list-section{
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, 1fr);
     justify-content: space-between;
-    width:  100rem;
+    width:  90rem;
     max-width: 100%;
     margin: 3rem auto;
     row-gap: 3rem;
     padding: 2rem;
 }
 .member{
-    width: 22rem;
+    width: 26rem;
     margin: 0 auto;
 }
 .member-one{
-    grid-column: 1/5;
+    grid-column: 2/3;
     grid-row: 1;
 
 }
 .member-two{
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 2;
 
 }
 .member-three{
-    grid-column: 3/4;
+    grid-column: 2/3;
     grid-row: 2;
 
 }
 .member-four{
-    grid-column: 1/2;
-    grid-row: 3;
+    grid-column: 3/4;
+    grid-row: 2;
 
 }
 .member-five{
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 3;
 }
 .member-six{
-    grid-column: 3/4;
+    grid-column: 2/3;
     grid-row: 3;
 }
 .member-seven{
-    grid-column: 4/5;
+    grid-column: 3/4;
     grid-row: 3;
 }
 .member-img{
-    width: 22rem;
+    width: 26rem;
+    height: 25rem;
+    object-fit: cover;
+}
+@media screen and (max-width: 1360px){
+    .member-img{
+    width: 23rem;
     height: 23rem;
     object-fit: cover;
 }
-@media screen and (max-width: 1540px){
+.member{
+    width: 23rem;
+    margin: 0 auto;
+}
+    /* .member-list-section{
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(4, 1fr);
+        width:  55rem;
+    }
+    .member-one{
+        grid-column: 1/3;
+        grid-row: 1;
+
+    }
+    .member-two{
+        grid-column: 1/2;
+        grid-row: 2;
+
+    }
+    .member-three{
+        grid-column: 2/3;
+        grid-row: 2;
+
+    }
+        .member-four{
+        grid-column: 1/2;
+        grid-row: 3;
+
+    }
+    .member-five{
+        grid-column: 2/3;
+        grid-row: 3;
+    }
+    .member-six{
+        grid-column: 1/2;
+        grid-row: 4;
+    }
+    .member-seven{
+        grid-column: 2/3;
+        grid-row: 4;
+    }
+    .member{
+        width: 25rem;
+        margin: 0 auto;
+    }
+    .member-img{
+        width: 25rem;
+        height: 100%;
+        object-fit: cover;
+    } */
+
+}
+@media screen and (max-width: 1200px){
     .member-list-section{
         display: grid;
         grid-template-columns: repeat(2, auto);
@@ -114,14 +173,14 @@
         grid-row: 4;
     }
     .member{
-    width: 25rem;
-    margin: 0 auto;
-}
-.member-img{
-    width: 25rem;
-    height: 100%;
-    object-fit: cover;
-}
+        width: 25rem;
+        margin: 0 auto;
+    }
+    .member-img{
+        width: 25rem;
+        height: 100%;
+        object-fit: cover;
+    }
 
 }
 
@@ -129,7 +188,7 @@
 
     .member-list-section{
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(6, auto);
+        grid-template-rows: repeat(7, auto);
         width: 32rem;
     }
     .member-one{
